# rust-unif-k

./: Cargo.toml  README.md  build.rs
proptest-regressions/: fineform.txt  nnf.txt
proptest-regressions/decider/: clauses.txt  sequents.txt  unifiability.txt
proptest-regressions/nnf/: simpl.txt
src/: decider.rs  extended_nnf.rs  fineform.rs  fineform_correct.rs  fineform_iter.rs  generated_formula.rs  lazy_decider.rs  lazy_nnf.rs  lib.rs  main.rs  nnf.rs  nnf_parser.lalrpop  nnf_parser.rs  powerset.rs
src/decider/: clauses.rs  mod.rs  mod.rs~  sequent_deconstructor.rs  sequents.rs  sequents.rs~  unifiability.rs  validity.rs
src/nnf/: display.rs  random.rs  simpl.rs
