[package]
name = "generator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
rayon = "*"
proptest = "*"
proptest-derive = "*"
num-bigint = "*"
num-traits = "*"
bitvec = "*"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "*"
rand = "*"
rand_distr = "*"

[build-dependencies]
lalrpop = "0.19.8"

[profile.release]
debug = true
